# datalake-format-explorer

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
app/: __init__.py  pipeline.py
app/ETL/: __init__.py  handler_http.py  manager_aws.py  manager_pandas.py  manager_polars.py  manager_spotify.py
app/models/: __init__.py  spotify_models.py
data/: beatles-data.csv  beatles-data.json  beatles-data.parquet  raul-seixas-data.csv  raul-seixas-data.json  raul-seixas-data.parquet
docs/: index.md
search/: search_index.json
tests/: test_extract.py  test_loat.py  test_transform.py
